--- a/sign_template.html
+++ b/sign_template.html
@@ -18,18 +18,12 @@
     .table-xs > thead > tr > td,
     .table-xs > tbody > tr > td,
     .table-xs > tfoot > tr > td {
-      padding: 2px;
+      padding: 1px 2px;
       font-size: 80%;
+      line-height:1.2;
     }
     section {
-      margin-top: 50px;
-    }
-    section > h2 {
-      background: #f0f0f0;
-      padding: 5px;
-    }
-    .percentile_chart {
-      height:175px;
+      margin-top: 100px;
     }
     td.number, th.number {
       text-align:right;
@@ -188,6 +182,7 @@ classify-able, and some may incorrectly categorized. The categories are just for
 
 {% for sign_type, title in categories %}
 
+<section>
 <h2 id="{{escape(sign_type)}}">{{title}}</h2>
 <table class="table table-xs table-hover sign-data">
   <thead><tr>
@@ -246,6 +241,7 @@ classify-able, and some may incorrectly categorized. The categories are just for
     </tr>
   </tfoot>
 </table>
+</section>
 
 {% end %}
 
