--- a/sign_template.html
+++ b/sign_template.html
@@ -39,29 +39,32 @@
       font-size:70%;
     }
 
-td.number .down {
+td.number .up {
   color:#1C7322;
   font-weight:300;
 }
-td.number .down-5 {
+td.number .up-5 {
   color:#2FB639;
   font-weight:400;
 }
-td.number .down-10 {
+td.number .up-10 {
   color:#3DE54A;
   font-weight:500;
 }
-td.number .up {
+td.number .down {
   color:#9E5656;
   font-weight:300;
 }
-td.number .up-10 {
+td.number .down-10 {
   color:#E24F4F;
   font-weight:500;
 }
-td.number .up-5 {
+td.number .down-5 {
   color:#DA4C4C;
   font-weight:400;
+}
+td.number .nochange {
+  color:#888;
 }
 
 a.endpoint {
